<resources>
    <string name="app_name">Kovid</string>
    <string name="title_country">Country</string>
    <string name="title_state_list">States</string>
    <string name="title_state_details">State Details</string>
    <string name="title_notifications">Notifications</string>
    <string name="total_positive_cases">Positive Results (Total)</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="deaths">Deaths</string>
    <string name="test_results">Test Results</string>
    <string name="date_selected">Date Selected</string>
    <string name="positive_cases">Positive Cases</string>
    <string name="positive_covid_19_cases_over_time">90 Day Data : Positive Cases</string>
    <string name="total_test_results">Total Test Results</string>
    <string name="last_checked">Last Checked</string>
    <string name="death_increase">Death Increase</string>
    <string name="positive_increase">Positive Increase</string>
    <string name="todays_data">Today\'s Data for %s</string>
    <string name="todays_data_US">Today\'s Data for the United States</string>
    <string name="hospitalizations_over_time">90 Day Data : Hospitalizations</string>
    <string name="hospitalizations">Hospitalizations</string>
    <string name="deaths_over_time">90 Day Data : Deaths</string>
    <string name="last_updated">Last Updated: %s</string>
</resources>